org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/Feature_invalid_noType.sysml.xt
//*
XPECT_SETUP org.omg.sysml.xpect.tests.validation.invalid.SysMLTests
	ResourceSet {
		ThisFile {}
		}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
			}
		}
	}
END_SETUP 
*/

package 'Test' {
	package A {
		part def B{
			// XPECT errors --> "Features must have at least one type" at "f;"
			f;
		}
	}
}
